--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,14 @@
     width: 100%;
     z-index: 10;
   }
+
+  .dot {
+    height: 10px;
+    width: 10px;
+    background-color: #000000;
+    border-radius: 100%;
+    display: inline-block;
+  }
   
   .logo {
     float: left;
