--- a/styles/main.css
+++ b/styles/main.css
@@ -1,324 +1,211 @@
-* {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    height: fit-content;
-  }
-  
-  header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: rgba(255, 255, 255, 0.7);
-  
-    width: 100%;
-    z-index: 10;
-  }
-  
-  .logo {
-    float: left;
-    margin: 0 0 0 18rem;
-    color: white;
-    height: 3.5rem;
-  }
-  
-  #header_div {
-    background-image: url(F:/Grey-Atom/sprint-1/ark-studio/img/billboard.jpg);
-    z-index: 5;
-  }
-  
-  li,
-  a,
-  button {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 12px;
-    text-decoration: none;
-  }
-  
-  #nav_list,
-  li {
-    list-style: none;
-  }
-  
-  .nav_bar {
-    float: right;
-    margin-right: 19rem;
-  }
-  
-  .nav_bar li {
-    display: inline-block;
-    padding: 0 0.5rem;
-  }
-  
-  a {
-    color: black;
-  }
-  
-  .cta {
-    background-image: url(F:/Grey-Atom/sprint-1/ark-studio/img/billboard.jpg);
-    position: relative;
-    /* float: left; */
-    width: 100%;
-    height: 95%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: -10;
-    display: block;
-  }
-  
-  
-  
-  #cta_text {
-    float: left;
-    margin-left: 20px;
-    font-size: 14px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: black;
-    font-weight: lighter;
-    padding-top: 0.5%;
-    letter-spacing: 0.1rem;
-  }
-  
-  #cta_link {
-    float: right;
-    margin-top: 1%;
-    color: white;
-    text-decoration: none;
-    margin-right: 1.5%;
-    padding: 0.5% 2.2%;
-    background-color: #50ccff;
-    font-weight: 500;
-  }
-  
-  .section_div {
-    background: rgba(255, 255, 255, 0.7);
-    position: absolute;
-    top: 92%;
-    width: 100%;
-    height: 9%;
-  }
-  
-  .services {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    background: #fbfbfb;
-    position: relative;
-    width: 66%;  
-    height: 60%;
-  }
-  
-  .services h1 {
-      margin-top: 0px;margin-bottom: 5px; padding-top: 60px; color: #616264; font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-  
-  .services li {
-  position: relative;display: inline-block;
-  }
-  
-  .services p {
-    width: 250px; margin-top: 0px;
-  }
-  
-  .services h2 {
-    width: 250px; text-align: center; word-wrap: normal; font-size: medium; color: #616264; font-family: Verdana, Geneva, Tahoma, sans-serif;
-  
-  }
-  
-  .recent_work {
-    width: 100%;
-  }
-  
-  .recent_work img {
-    width: 20.05%;
-    padding: 0;
-    margin: 0;
-    margin-left: -4px;
-    -webkit-transition: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-  }
-  
-  .recent_work img:hover {
-    width: 19%;
-  }
-  
-  .testimonials {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    background: #fbfbfb;
-    position: relative;
-    width: 66%;
-    height: 60%;
-  }
-  
-  .testimonials h1{
-    margin-top: 0px;margin-bottom: 50px; padding-top: 60px; color: #616264; font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-  
-  footer {
-    width: 100%;
-    height: 70%;
-    background: #353535;
-    margin: 0 auto;
-    color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14px;
-    letter-spacing: 1px;
-    text-align: left;
-    padding-top: 5%;
-    margin-top:-92.5px;
-  }
-  
-  .footer_widget li {
-    font-size: 14px;
-  }
-  
-  .footer_widget {
-      height: 100%; width: 66%; margin: 0 auto;
-  
-  }
-  
-  address {
-    line-height: 1.5rem;
-    font-size: 14px;
-    font-style: normal;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-  
-  .footer_about p {
-    line-height: 1.5rem;
-    margin: 0;
-  }
-  
-  h3 {
-    margin-bottom: 30px;
-  }
-  
-  .client_brand {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    background-color: #f3f3f3;
-    text-align: center; width: 100%;
-  }
-  
-  .client_brand img {
-    padding-left: 2.9%;
-    padding-right: 2.9%;
-  }
-  
-  h4 {
-    /* margin-top: 10px; */
-    margin-bottom: 0px;
-    width: 250px;
-    text-align: center;
-    word-wrap: normal;
-    font-size: medium;
-    color: #616264;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
-  .footer_company a, .footer_support a {
-    text-decoration: none;
-    color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14px;
-    letter-spacing: 1px;
-    text-align: left;
-  }
-  
-  
-  .footer_location,
-  .footer_company {
-    display: inline-block;
-    padding: 8%;
-    float: left;
-    padding-left: 0px;
-  }
-  
-  
-  
-  .footer_support {
-    display: inline-block;
-    float: left;
-    padding: 8%;
-    padding-left: 4%;
-  }
-  
-  .rights {
-    position: absolute;
-    margin-top: -5%;
-    left: 40%;
-  }
-  
-  .footer_about {
-    display: inline-block;
-    float: left;
-    padding-top: 8%;
-    padding-bottom: 8%;
-    padding-left: 2%;
-    
-  }
-  
-  .social_icons {
-    margin-top: 10px;
-    background-image: url(F:/Grey-Atom/sprint-1/ark-studio/img/social.png);
-    background-repeat: no-repeat;
-    height: 25px;
-  }
-  
-  .social_icons:hover {
-    background-image: url(F:/Grey-Atom/sprint-1/ark-studio/img/social_hover.png);
-  }
-  
-  #cta_1 {
-    margin-top: 0; margin-bottom: 0; width: 60%; padding: 3%;  display: inline-block; letter-spacing: 0.12rem;
-  }
-  
-  #comp_list {
-    padding: 0; margin: 0; font-size: 14px;
-  }
-  
-  #cta_2 {
-  color: white; text-decoration: none; margin-left: 5%; padding: 1% 5%;  background-color: #50ccff;
-  }
-  
-  #sup_item_1,#sup_item_2,#sup_item_3,#comp_item_1,#comp_item_2,#comp_item_3 {
-  padding-bottom: 8px;
-  padding-bottom: 8px;
-  padding-bottom: 8px;
-  }
-  
-  .testimonials p{
-  width: 250px; margin-top: 10px; color: #aaabb6; font-size:small;
-  
-  }
-  
-  .testimonials img {
-  border-radius: 50%;
-  }
-  
-  .testimonials span{
-  color:#aaabb6; font-size: small;
-  }
-  
-  #nav_client1 {
-  position: relative;display: inline-block;left: -140px;   
-  }
-  
-  #nav_client2 {
-  display: inline-block;position: relative;left: -20px;
-  }
-  
-  #nav_client3{
-  position: relative;display: inline-block;left: 90px;
-  }
-  
-  .cta_div{
-  width: 100%;margin: 0 auto;background-color: #434343;position: relative;
+.transparent_nav{
+  background-color: rgba(255, 255, 255, 0.7);
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 81px;
+  position: fixed;
+}
+
+
+#nav_list{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: right;
+ 
+}
+ul li{
+  display: inline;
+  color: black;
+  padding: 10px ;
+  position: relative;
+  top: 32px;
+  right: 280px;
+}
+
+.pos{
+  position: absolute;
+  left:280px ;
+  top: -1px;
+}
+
+.hero{
+  max-width: 100%;
+  overflow: visible;
+}
+
+.cta{
+  display: block;
+  background-color:rgba(255, 255, 255, 0.7) ;
+  position: absolute;
+  top: 632px;
+  width: 100%;
+  height: 70px;
+}
+.cta div{
+  display: inline-block;
+  background-color: turquoise;
+  position: relative;
+  top: -60px;
+  left: 1113px;
+  height: 44px;
+  width: 273px;
+}
+.cta div a{
+  text-align: center;
+  position: relative;
+  left: 55px;
+  top: 12px;
   color: white;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 14px;
-  width: 66%;
-  }
+  text-decoration: none;
+  font-size: 13px;
+  letter-spacing: 1px;
+}
+.services_wrapper ul{
+  display: flex;
+  flex-flow: row nowrap;
+  width: 100%;
+  justify-content: center;
+}
+.services_wrapper li{
+     width: 200px;
+     position: relative;
+     left: -40px;
+     top: -20px;
+  text-align: center;
+  padding-right: 85px;
+  padding-left: 85px
+} 
+.servicesHead{
+ text-align: center;
+  width: 100%;
+}
+
+.flex_container{
+  display: flex;
+  flex-flow: row nowrap;
+  text-align: center;
+  justify-content: center;
+  left: 10px;
+}
+.flex_container > div{
+      width: 200px;
+      padding: 88px;
+}
+.recent_work{
+   display: flex;
+  flex-flow:row nowrap;
+  position: relative;
+  top: -0px;
+  width: 100%;
+}
+
+.recent_work > div{
+   width: 300px;
+}
+.recent_work > div:hover{
+  opacity: 0.7;
+}
+.testimonials_wrapper{
+  text-align: center;
+  position: relative;
+
+}
+.flex_container3>ul{
+ display: flex;
+  flex-flow: row nowrap;
+ justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+  left: 250px
+}
+.flex_container3 li{
+ width: 200px;
+  padding-right: 50px;
+}
+
+.transparent_foot{
+  background-color: rgba(128, 128, 128,0.1);
+  width: 100%;
+  height: 81px;
+  position: relative;
+  top: 25px
+}
+.flex_brand{
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  position: relative;
+  top: 30px;
+}
+.flex_brand>div{
+  padding-right: 100px;
+}
+.foot_widget{
+width: 100%;
+height: 400px;
+background-color: rgba(0,0,0,0.8);
+position: relative;
+  
+  overflow: visible;
+}
+#footer1{
+background-color: rgba(128, 128, 128,0.1);
+  width: 60%;
+  height: 81px;
+  margin: 0 auto;
+  
+}
+#cta2_link{
+  display: inline-block;
+  background-color: turquoise;
+  color: white;
+  text-decoration: none;
+  font-size: 13px;
+  letter-spacing: 1px;
+  padding: 15px;
+  float: right;
+  position: relative;
+  top: -35px;
+  right: 20px
+}
+.cta2 p{
+  text-align: left;
+  position: relative;
+  top: 20px;
+  font-size: 24px;
+  color: white
+}
+.footer_widget{
+   display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  width:100%;
+  align-content: space-between;
+  margin-left: 40px;
+  position: relative;
+  top: -300px
+}
+.footer_widget>div{
+ padding-right: 8px;
+ color: white;
+}
+#comp_list,#sup_list{
+display: flex;
+flex-flow: column nowrap;
+  justify-content: center;
+}
+#comp_list li,#sup_list li{
+  text-align: left;
+  position: relative;
+  left: -45px;
+  top: -10px;
+  padding: px;
+  color: white;
+}
+.rights{
+  color: white; position: relative;top: 250px; right: 400px
+}
+
